<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/mybg"
        android:contentDescription="@string/background" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableTint="@color/black"
                android:foregroundTint="@color/black"
                android:textColor="@color/black"
                android:text="@string/back"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="60dp"
                android:textColor="@color/white"
                android:thumbTint="@color/white"
                android:trackTint="@color/white"
                android:checked="true"
                tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:thumbTint="@color/white"
                android:trackTint="@color/white"
                tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView87"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test142763"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <Switch
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="60dp"
                android:textColor="@color/white"
                android:thumbTint="@color/white"
                android:trackTint="@color/white"
                tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <Switch
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:thumbTint="@color/white"
                android:trackTint="@color/white"
                tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center"
                android:layout_weight="1">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:drawableTint="@color/black"
                    android:foregroundTint="@color/black"
                    android:textColor="@color/black"
                    android:text="@string/save"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible" />
        </TableRow>


    </TableLayout>



</FrameLayout>