<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.JoinGame">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/mybg"
        android:contentDescription="@string/background" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableTint="@color/black"
                android:foregroundTint="@color/black"
                android:textColor="@color/black"
                android:text="@string/back"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/join_game"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible"
                tools:ignore="VisualLintBounds" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible"
                tools:ignore="VisualLintBounds" />


            <EditText
                android:id="@+id/keyInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:hint="@string/game_key"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible"
                tools:ignore="VisualLintBounds" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible"
                tools:ignore="VisualLintBounds" />

            <EditText
                android:id="@+id/userInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible"
                tools:ignore="VisualLintBounds" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible"
                tools:ignore="ButtonStyle,VisualLintBounds" />

            <Button
                android:id="@+id/joinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableTint="@color/black"
                android:foregroundTint="@color/black"
                android:text="@string/join"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="invisible"
                tools:ignore="ButtonStyle,VisualLintBounds" />

        </TableRow>


    </TableLayout>

</FrameLayout>